--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.6.1",
+    "axios": "^0.27.2",
     "formik": "^2.2.9",
     "next": "12.3.1",
     "react": "18.2.0",
