--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.6.1",
+    "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.5",
+    "styled-components": "^5.3.6",
     "yup": "^0.32.11"
   },
   "devDependencies": {
