fix: eslint no-console 규칙 제거

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,6 @@
   },
   "plugins": ["react", "react-hooks", "@typescript-eslint"],
   "rules": {
-    "no-unused-vars": "error",
-    "no-console": "error"
+    "no-unused-vars": "error"
   }
 }
