--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.0",
     "@types/node": "18.7.22",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
