--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.6.1",
+    "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
+    "@toast-ui/react-editor": "^3.2.2",
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
