--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^4.6.1",
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "formik": "^2.2.9",
     "jci-moyeo-design-system": "^0.2.2",
     "next": "12.3.1",
