--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.5.0",
+    "@types/kakao-js-sdk": "^1.39.1",
     "@types/node": "18.7.22",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
