--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start -p $PORT",
     "lint": "next lint",
     "heroku-postbuild": "npm run build"
   },
   "engines": {
-    "node": "16.13.0",
+    "node": ">=16.13.0",
     "npm": "8.1.0"
   },
   "dependencies": {
@@ -24,7 +24,9 @@
     "formik": "^2.2.9",
     "jci-moyeo-design-system": "~0.2.7",
     "next": "12.3.1",
+    "next-cookies": "^2.0.3",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "recoil": "^0.7.5",
     "styled-components": "^5.3.6",
@@ -35,6 +37,7 @@
     "@types/kakao-js-sdk": "^1.39.1",
     "@types/node": "18.7.22",
     "@types/react": "18.0.21",
+    "@types/react-cookies": "^0.1.0",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
