feature: 정보수정, 글쓰기

--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   "dependencies": {
     "@tanstack/react-query": "^4.6.1",
     "@tanstack/react-query-devtools": "^4.14.1",
+    "@toast-ui/editor": "^3.2.1",
     "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
     "@toast-ui/react-editor": "^3.2.2",
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
-    "jci-moyeo-design-system": "~0.2.7",
+    "jci-moyeo-design-system": "0.2.9",
     "next": "12.3.1",
     "next-cookies": "^2.0.3",
     "react": "18.2.0",
